--- a/src/app/authentication/signin/signin.component.scss
+++ b/src/app/authentication/signin/signin.component.scss
@@ -7,6 +7,10 @@
     )
   );
 }
+.left-img{
+  height: 200px;
+  width: 200px;
+}
 :host ::ng-deep .btnStyle2 {
   @include mat.button-overrides(
     (
