--- a/src/app/admin/contact/college-contact-info/college-contact-info.component.html
+++ b/src/app/admin/contact/college-contact-info/college-contact-info.component.html
@@ -1,74 +1,143 @@
 <section class="content">
   <div class="content-block">
+    @for (breadscrum of breadscrums; track breadscrum) {
     <div class="block-header">
-        <form [formGroup]="collegeContactForm" (ngSubmit)="onSubmit()" class="container py-4">
-  <div class="row g-3">
-    <div class="col-md-6">
-      <label for="collegeName" class="form-label">College Name</label>
-      <input type="text" class="form-control" id="collegeName" formControlName="collegeName">
+      <!-- breadcrumb -->
+      <app-breadcrumb [title]="breadscrum.title" [items]="breadscrum.items" [active_item]="breadscrum.active">
+      </app-breadcrumb>
     </div>
-
-    <div class="col-md-6">
-      <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" formControlName="email">
-    </div>
-
-    <div class="col-md-6">
-      <label for="phone" class="form-label">Phone</label>
-      <input type="tel" class="form-control" id="phone" formControlName="phone">
-    </div>
-
-    <div class="col-md-6">
-      <label for="altPhone" class="form-label">Alternate Phone</label>
-      <input type="tel" class="form-control" id="altPhone" formControlName="altPhone">
-    </div>
-
-    <div class="col-md-6">
-      <label for="website" class="form-label">Website</label>
-      <input type="url" class="form-control" id="website" formControlName="website">
-    </div>
-
-    <div class="col-12">
-      <label for="address" class="form-label">Address</label>
-      <textarea class="form-control" id="address" rows="2" formControlName="address"></textarea>
-    </div>
-
-    <div class="col-md-4">
-      <label for="city" class="form-label">City</label>
-      <input type="text" class="form-control" id="city" formControlName="city">
-    </div>
-
-    <div class="col-md-4">
-      <label for="state" class="form-label">State</label>
-      <input type="text" class="form-control" id="state" formControlName="state">
-    </div>
-
-    <div class="col-md-4">
-      <label for="zip" class="form-label">Zip Code</label>
-      <input type="text" class="form-control" id="zip" formControlName="zip">
-    </div>
-
-    <div class="col-md-6">
-      <label for="country" class="form-label">Country</label>
-      <input type="text" class="form-control" id="country" formControlName="country">
-    </div>
-
-    <div class="col-md-6">
-      <label for="mapLocation" class="form-label">Map Location URL</label>
-      <input type="url" class="form-control" id="mapLocation" formControlName="mapLocation">
-    </div>
-
-    <div class="col-12 text-end">
-      <button type="submit" class="btn btn-primary" [disabled]="collegeContactForm.invalid">Submit</button>
+    }
+    <div class="row clearfix">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+        <div class="card">
+          <div class="header">
+            <h2>College Contact Info</h2>
+          </div>
+          <div class="body">
+            <form class="m-4" [formGroup]="collegeContactForm" (ngSubmit)="onSubmit()">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>College Name</mat-label>
+                    <input matInput formControlName="collegeName" required>
+                    @if (collegeContactForm.get('collegeName')?.hasError('required')) {
+                    <mat-error>
+                      College Name is required
+                    </mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input matInput formControlName="email" required>
+                    @if (collegeContactForm.get('email')?.hasError('email') && collegeContactForm.get('email')?.touched) {
+                    <mat-error>
+                      Please enter a valid email address
+                    </mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>Phone</mat-label>
+                    <input matInput formControlName="phone" required>
+                    @if (collegeContactForm.get('phone')?.hasError('required')) {
+                    <mat-error>
+                      Phone number is required
+                    </mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>Alternate Phone</mat-label>
+                    <input matInput formControlName="altPhone">
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>Website</mat-label>
+                    <input matInput formControlName="website">
+                  </mat-form-field>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>Map Location URL</mat-label>
+                    <input matInput formControlName="mapLocation">
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>Address</mat-label>
+                    <textarea matInput formControlName="address" rows="2"></textarea>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>City</mat-label>
+                    <input matInput formControlName="city" required>
+                    @if (collegeContactForm.get('city')?.hasError('required')) {
+                    <mat-error>
+                      City is required
+                    </mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>State</mat-label>
+                    <input matInput formControlName="state" required>
+                    @if (collegeContactForm.get('state')?.hasError('required')) {
+                    <mat-error>
+                      State is required
+                    </mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>Zip Code</mat-label>
+                    <input matInput formControlName="zip" required>
+                    @if (collegeContactForm.get('zip')?.hasError('required')) {
+                    <mat-error>
+                      Zip Code is required
+                    </mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field class="example-full-width mb-3" appearance="outline">
+                    <mat-label>Country</mat-label>
+                    <input matInput formControlName="country" required>
+                    @if (collegeContactForm.get('country')?.hasError('required')) {
+                    <mat-error>
+                      Country is required
+                    </mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
+                  <button class="btn-space" [disabled]="!collegeContactForm.valid" mat-flat-button color="primary">Submit</button>
+                  <button type="button" mat-flat-button class="formCancelBtn">Cancel</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</form>
-</div>
-    </div>
-    </section>
-
-
-
-
-
-
+</section>
