--- a/src/app/admin/dashboard/demo-page/demo-page.component.html
+++ b/src/app/admin/dashboard/demo-page/demo-page.component.html
@@ -1,6 +1,6 @@
 <section class="content">
-  <div class="content-block">
-    <h1>Demo page</h1>
+  <div class="content-block text-center">
+    <h1>Dashboard Page</h1>
     </div>
     </section>
     
