--- a/src/app/admin/front-office/slider-management/slider-management.component.html
+++ b/src/app/admin/front-office/slider-management/slider-management.component.html
@@ -1,1 +1,67 @@
-<p>slider-management works!</p>
+<section class="content">
+  <div class="content-block">
+    <div class="block-header">
+      <app-breadcrumb
+        [title]="'Banner Management'"
+        [items]="['Admin Panel']"
+        [active_item]="'Banner Management'"
+      ></app-breadcrumb>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        <h2>Add / Edit College Banner</h2>
+      </div>
+      <div class="card-body">
+        <form [formGroup]="bannerForm" (ngSubmit)="onSubmit()" enctype="multipart/form-data">
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Banner Title</mat-label>
+                <input matInput formControlName="title" required />
+                <mat-error *ngIf="bannerForm.get('title')?.hasError('required')">
+                  Title is required
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div class="col-md-6 mb-3">
+              <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Link URL</mat-label>
+                <input matInput formControlName="link" />
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label>Upload Banner Image</label>
+              <input type="file" class="form-control" (change)="onFileChange($event)" />
+              <div *ngIf="previewUrl" class="mt-2">
+                <img [src]="previewUrl" alt="Banner Preview" style="max-height: 100px;" />
+              </div>
+            </div>
+
+            <div class="col-md-3 mb-3">
+              <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Display Order</mat-label>
+                <input matInput type="number" formControlName="order" />
+              </mat-form-field>
+            </div>
+
+            <div class="col-md-3 mb-3 d-flex align-items-center">
+              <mat-slide-toggle formControlName="isActive" color="primary">
+                Active
+              </mat-slide-toggle>
+            </div>
+          </div>
+
+          <div class="text-right mt-3">
+            <button mat-flat-button color="primary" [disabled]="!bannerForm.valid">Submit</button>
+            <button mat-flat-button type="button" class="formCancelBtn">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
