--- a/src/app/admin/front-office/welcome-message/welcome-message.component.html
+++ b/src/app/admin/front-office/welcome-message/welcome-message.component.html
@@ -1,1 +1,64 @@
-<p>welcome-message works!</p>
+<section class="content">
+  <div class="content-block">
+@for (breadcrumb of breadscrumbs; track breadcrumb) {
+  <div class="block-header">
+    <app-breadcrumb 
+      [title]="breadcrumb.title" 
+      [items]="breadcrumb.items" 
+      [active_item]="breadcrumb.active">
+    </app-breadcrumb>
+  </div>
+}
+
+
+    <div class="row clearfix">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+        <div class="card">
+          <div class="header">
+            <h2>College Welcome Message</h2>
+          </div>
+          <div class="body">
+            <form class="m-4" [formGroup]="welcomeForm" (ngSubmit)="onSubmit()">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field appearance="outline" class="example-full-width w-100 mb-3">
+                    <mat-label>Heading</mat-label>
+                    <input matInput formControlName="heading" />
+                    @if (welcomeForm.get('heading')?.hasError('required')) {
+                      <mat-error>Heading is required</mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mb-2">
+                  <mat-slide-toggle formControlName="isActive" color="primary">
+                    Show on Website
+                  </mat-slide-toggle>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
+                  <mat-form-field appearance="outline" class="example-full-width w-100 mb-3">
+                    <mat-label>Welcome Message</mat-label>
+                    <textarea matInput rows="4" formControlName="message"></textarea>
+                    @if (welcomeForm.get('message')?.hasError('required')) {
+                      <mat-error>Message is required</mat-error>
+                    }
+                  </mat-form-field>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
+                  <button mat-flat-button color="primary" [disabled]="!welcomeForm.valid">Submit</button>
+                  <button type="button" mat-flat-button class="formCancelBtn">Cancel</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
