--- a/src/app/authentication/page404/page404.component.html
+++ b/src/app/authentication/page404/page404.component.html
@@ -1,10 +1,10 @@
 <div class="auth-container">
   <div class="row auth-main">
-    <div class="col-sm-6 px-0 d-none d-sm-block">
+    <!-- <div class="col-sm-6 px-0 d-none d-sm-block">
       <div class="left-img" style="background-image: url(assets/images/pages/bg-04.png);">
       </div>
-    </div>
-    <div class="col-sm-6 auth-form-section">
+    </div> -->
+    <div class="col-12 auth-form-section">
       <div class="form-section">
         <div class="auth-wrapper">
           <form>
@@ -18,17 +18,11 @@
               The Page You Are Looking For Not Available!
             </span>
             <div class="container-auth-form-btn mt-5">
-              <button mat-flat-button color="primary" class="auth-form-btn" type="submit">
+              <button routerLink="/admin/dashboard/demo-page" mat-flat-button color="primary" class="auth-form-btn" type="submit">
                 Go To Home Page
               </button>
             </div>
-            <div class="w-full p-t-15 p-b-15 text-center">
-              <div>
-                <a routerLink="/authentication/signin" class="txt1">
-                  Need Help?
-                </a>
-              </div>
-            </div>
+          
           </form>
         </div>
       </div>
