--- a/src/app/admin/teachers/principal-message/principal-message.component.html
+++ b/src/app/admin/teachers/principal-message/principal-message.component.html
@@ -1,3 +1,5 @@
+<section class="content">
+  <div class="content-block">
 <div class="container mt-4">
   <h2>Principal's Message</h2>
   <form [formGroup]="messageForm" (ngSubmit)="submitForm()">
@@ -20,4 +22,6 @@
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
 </div>
+</div>
+</section>
 
